# macti-api

./: .copilot-commit-message-instructions.md  .env.example  .gitignore  CONTRIBUTING.md  README.md  alembic.ini  avance.txt  inspect_bd.py  macti.db  package-lock.json  pyproject.toml  requeriments.txt  resetbd.py  testpass.py  tmoodle.py  vercel.json
.github/workflows/: ci-cd.yml
Tests/: pcorre.py  testpass.py  tmoodle.py
alembic/: README.md  env.py
alembic/versions/: 3e3b4458d6ae_initial.py  bcee208a2b56_initial.py
app/: main.py
app/core/: config.py  database.py  environment.py
app/core/logging/logs/: app_2026-06-30.jsonl
app/modules/auth/: controllers.py  email_service.py  enums.py  models.py  routes.py  schema.py  services.py
app/modules/courses/: routes.py  schemas.py
app/modules/nbgrader/: routes.py
app/modules/register/: routes.py  schema.py  schemas.py
app/modules/temp/: routes.py
app/shared/config/: kc_configs.py  moodle_configs.py
app/shared/dependecies/: auth_current_user.py  auth_permissions.py  auth_scope_course_manager.py  auth_scopes_base.py  auth_verify.py  get_current_user.py
app/shared/enums/: enums.py  institutes_enum.py  role_enum.py  role_moodle_enum.py  status_enum.py
app/shared/models/: JIDs_model.py  __init__.py  auth_model.py  courses_model.py  jids_model.py  student_courses_model.py  teacher_courses_model.py  user_courses_model.py  user_profiles_model.py  users_model.py  verification_tokens_model.py
app/shared/services/: moodle_client.py  moodle_service.py
http/: email.http  test.http
(+37 files in other folders)
