[project]
name = "MACTI-API"
version = "0.1.0"
description = "Backend de la plataforma MACTI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.120.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.14.2",
]

[tool.pyright]
exclude = [".venv"]
venvPath = "."
venv = ".venv"